Laborator 8 - Shopping List

--- a/Fodor_Emanuela_Lab7.csproj
+++ b/Fodor_Emanuela_Lab7.csproj
@@ -54,6 +54,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Compile Update="AboutPage1.xaml.cs">
 	    <DependentUpon>AboutPage1.xaml</DependentUpon>
 	  </Compile>
@@ -61,6 +65,12 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="AboutPage1.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ListEntryPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
